# bqat-gui

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  cliff.toml  compose.yaml  config.json  pyproject.toml  requirements.txt  test.sh
.github/workflows/: release.yml
bqat_gui/: __init__.py  __main__.py  app.py  utils.py
desktop/: .env  .gitignore  electron-builder.json5  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/electron/: electron-env.d.ts  main.ts  preload.ts
desktop/public/: config.json
desktop/src/: App.vue  main.ts
desktop/src/archive/: Preprocess.vue
desktop/src/assets/: base.css  main.css
desktop/src/components/: HomeItem.vue  Homepage.vue  utils.ts
desktop/src/router/: index.ts
desktop/src/stores/: dataStore.ts
desktop/src/views/: FilesView.vue  HomeView.vue  InputView.vue  LandingView.vue  Outlier.vue  OutputView.vue  Preprocess.vue  ProcessView.vue
lite/: Dockerfile  pyproject.toml  requirements.txt
lite/bqat_gui/: __init__.py  __main__.py  utils.py
web/: .env  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/public/: config.json
web/src/: App.vue  main.ts
web/src/archive/: Outlier.vue  Preprocess.vue
web/src/assets/: main.css
web/src/components/: HomeItem.vue  Homepage.vue  utils.ts
web/src/router/: index.ts
web/src/stores/: dataStore.ts
web/src/views/: FilesView.vue  InputView.vue  LandingView.vue  OutputView.vue  ProcessView.vue
