[tool.poetry]
name = "bqat-gui"
version = "0.1.4"
description = "BQAT is a biometric quality assessment tool for generating and analysing given biometric samples’ quality to international standards as well as to customized metrics. The BQAT tool functions by taking an input directory of biometric data and will produce both the raw quality information as well as an analysis report."
authors = ["L.Wu <l.wu@biometix.com>"]
readme = "README.md"
packages = [{include = "bqat_gui"}]

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^3.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
bqat-gui = 'bqat_gui.app:run'