[tool.poetry]
name = "bqat-gui"
version = "0.1.9"
description = ""
authors = ["L.Wu <l.wu@biometix.com>"]
readme = "README.md"
packages = [{include = "bqat_gui"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "==3.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
bqat-gui = 'lite.app:run'